Lid-update: 新增 Logo 圖檔更換商標

--- a/web.html
+++ b/web.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BDE.AI</title>
+    <title>科技股份有限公司</title>
     <link rel="stylesheet" href="./web.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 <header>
     <div class="nav-bar">
         <div className="logo">
-            <img src="./bde-logo.png" alt="Logo" style="width: 120px; height: 50px;">
+            <img src="./free_logo.png" alt="Logo" style="width: 120px; height: 50px;">
         </div>
         <div class="menu">
             <a href="#">首頁</a>
@@ -50,7 +50,7 @@
 </div>
 
 <footer>
-    <p>&copy; Twister5-極風雲創版權所有</p>
+    <p>&copy; 科技股份有限公司版權所有</p>
 </footer>
 
 <script>
